--- a/style.css
+++ b/style.css
@@ -70,10 +70,9 @@
     background-color: #eaeaea;
     padding:0.5%;
     width: 11%;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS';
 }
 
 .atributosBasicos{
-   
     margin-left: 1%;
 }
