--- a/style.css
+++ b/style.css
@@ -102,3 +102,15 @@
     text-align: center;
     border-radius: 8px;
 }
+
+#contornoBarra{
+    border:2px solid black;
+    border-radius: 3px;
+    height: 15px;
+    width: 255px;
+}
+
+#rellenoBarra{
+    background-color: #F6CF57;
+    height: 15px;
+}
