--- a/style.css
+++ b/style.css
@@ -55,28 +55,32 @@
 
 /* ---------------------------------------------------------------------------- */
 
-#divPokemon{
-    width: 100%;
+#divPokemon {
+    margin-left: 20%;
+    width: 60%;
     margin-top: 2%;
     height: 72vh;
     background-color: rgb(245, 244, 244);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 #imgDetalle{
-    width: 12%;
+    width: 95%;
+    height: auto;
+    margin-left: 2%;
     background-color: #eaeaea;
 }
 
 #detallesBasicos{
     font-weight: bold;
     background-color: #eaeaea;
-    padding:0.5%;
-    width: 11%;
+    width: auto;
     font-family: 'Trebuchet MS';
-}
-
-.atributosBasicos{
-    margin-left: 1%;
 }
 
 #nombreTitulo{
@@ -88,17 +92,14 @@
 
 #habilidades{
     background-color: #eaeaea;
-    width: 20%;
-    padding: 10px;
-    position: absolute;
-    top: 34.5vh;
-    left: 13%;
+    width: 95%;
+    height: 44%;
     font-family: 'Trebuchet MS';
     font-weight: bold;
 }
 
 #tipos{
-    width: 30%;
+    width: auto;
     text-align: center;
     border-radius: 8px;
 }
@@ -113,4 +114,14 @@
 #rellenoBarra{
     background-color: #F6CF57;
     height: 15px;
+}
+
+#estadisticas{
+    background-color: #eaeaea;
+    width: auto;
+    height: auto;
+}
+
+table{
+    border: 1px solid black;
 }
