--- a/style.css
+++ b/style.css
@@ -78,8 +78,8 @@ body{
 }
 
 #imgDetalle{
-    width: 95%;
-    background-color: #eaeaea;
+    transform: scale(1.5);
+    width: 74%;
 }
 
 #detallesBasicos{
@@ -114,7 +114,7 @@ body{
     border:2px solid black;
     border-radius: 3px;
     height: 15px;
-    width: 255px;
+    width: 200px;
 }
 
 #rellenoBarra{
@@ -132,6 +132,8 @@ body{
 
 table{
     border: 1px solid black;
+    width: 98%;
+    margin-left: 1%;
 }
 
 #evolucion0{
@@ -147,7 +149,7 @@ table{
 
 #evolucion2{
     background-color: #eaeaea;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
     margin-right: 2%;
 }
 
@@ -156,6 +158,7 @@ table{
 }
 
 #imagen{
+    background-color: #eaeaea;
     margin-top: 2%;
     margin-left: 2%;
 }
@@ -176,4 +179,6 @@ table{
 #imgEvolucion0, #imgEvolucion1, #imgEvolucion2{
     box-sizing: border-box;
     margin-top: 5%;
+    width: 50%;
+    height: 20vh;
 }
